--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div class="canvas_container">
         <canvas id="game_canvas"></canvas>
     </div>
-    <script src="gameLoop.js"></script>
+    <script src="objects.js"></script>
+    <script src="loop.js"></script>
     <script src="app.js"></script>
     
 </body>
