--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </div>
     <script src="objects.js"></script>
     <script src="loop.js"></script>
+    <script src="methods.js"></script>
     <script src="app.js"></script>
     
 </body>
