--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div class="canvas_container">
         <canvas id="game_canvas"></canvas>
     </div>
+    <div class="controls">
+        
+        <button id="_lineButton" class="_button">Line</button>
+    </div>
     <script src="objects.js"></script>
     <script src="loop.js"></script>
     <script src="methods.js"></script>
